# openssl-cms-detached

./: .gitignore  COPYING  Makefile  Makefile.am  README.md  TODO.md  conf-dev.sh  configure.ac  mycms.c  test.sh  test1.key  test2.der  test3.der  test3.key  test5.key
include/: Makefile.am  mycms-blob.h  mycms-certificate-driver-file.h  mycms-certificate-driver-pkcs11.h  mycms-certificate.h  mycms-dict.h  mycms-list.h  mycms.h
include/mycms/: Makefile.am  mycms-base.h  mycms-certificate-driver-file.h  mycms-certificate-driver-pkcs11.h  mycms-certificate.h  mycms-dict.h  mycms-getpass.h  mycms-io.h  mycms-system.h  mycms-util-getpass.h  mycms-util-system.h  mycms.h
src/: Makefile.am
src/lib/: Makefile.am  mycms-certificate-driver-file.c  mycms-certificate-driver-file.exports  mycms-certificate-driver-pkcs11.c  mycms-certificate-driver-pkcs11.exports  mycms-certificate-private.h  mycms-certificate.c  mycms-certificate.exports  mycms-core-decrypt.c  mycms-core-encrypt.c  mycms-core-encrypt.exports  mycms-core-sign.c  mycms-core-verify.c  mycms-decrypt.c  mycms-dict.c  mycms-dict.exports  mycms-encrypt.c  mycms-getpass.c  mycms-getpass.exports  mycms-pinentry.c  mycms-pinentry.h  mycms-system.c  mycms-system.exports  mycms.c  mycms.exports  versioninfo.rc.in
src/libmycms/: Makefile.am  mycms-certificate-driver-file.c  mycms-certificate-driver-pkcs11.c  mycms-certificate-private.h  mycms-certificate.c  mycms-certificate.exports  mycms-core-decrypt.c  mycms-core-encrypt.c  mycms-core-sign.c  mycms-core-verify.c  mycms-dict.c  mycms-dict.exports  mycms-io.c  mycms-io.exports  mycms-private.h  mycms-system-driver-core.h  mycms-system.c  mycms-system.exports  mycms.c  mycms.exports  pkcs11.h
src/libmycms-util/: Makefile.am  mycms-system-driver-util.h  mycms-util-getpass.c  mycms-util-pinentry.c  mycms-util-pinentry.h  mycms-util-system.c  mycms-util.exports
src/mycms-tool/: Makefile.am  cmd-common.c  cmd-common.h  cmd-decrypt.c  cmd-decrypt.h  cmd-encrypt.c  cmd-encrypt.h  cmd-sign.c  cmd-sign.h  cmd-verify.c  cmd-verify.h  getoptutil.h  main.c  util.c
src/tool/: Makefile.am  getoptutil.c  main.c  pinentry.c  pinentry.h  util.c  util.h
test/: Makefile.am  test-file.sh  test-pkcs11.sh  test.sh  test1.der  test2.key  test4.der  test4.key  test5.der
test/encrypt/: Makefile.am  test-file.sh  test-pkcs11.sh
test/mycms-tool/encrypt/: Makefile.am  test-file.sh  test-pkcs11.sh
test/mycms-tool/sign/: Makefile.am  test-file.sh  test-pkcs11.sh
test/sign/: Makefile.am  test-file.sh  test-pkcs11.sh
test/tool/: Makefile.am
test/tool/encrypt/: Makefile.am  test-file.sh  test-pkcs11.sh
test/tool/sign/: Makefile.am  test-file.sh  test-pkcs11.sh
